k8s/bot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bot
  labels:
    app: resume-bot
spec:
  type: ClusterIP
  ports:
    - port: 50051
      targetPort: 50051
      protocol: TCP
      name: grpc
  selector:
    app: resume-bot
