k8s/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  labels:
    app: resume-webapp
spec:
  type: NodePort
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30080
      protocol: TCP
      name: http
  selector:
    app: resume-webapp
